--- a/templates/includes/_style.html
+++ b/templates/includes/_style.html
@@ -123,13 +123,16 @@
     text-align: right;
   }
 
-  .card {
+  .card, .add, .del {
     margin-bottom: 8px;
     padding: 8px;
     background-color: lawngreen;
     border-radius: 8px;
     position: relative;
   }
+
+  .add {display: inline-block}
+  .del {background-color: red;}
 
   .card time {
     position: absolute;
