--- a/templates/books.html
+++ b/templates/books.html
@@ -18,7 +18,9 @@
     <td>{{book[2]}}</td>
     <td>{{book[3]}}</td>
     <td>
-      <a href="/del_book/{{book[0]}}" title="delete book">&lt;Books /&gt;</a>
+      <a href="/del_book/{{book[0]}}" title="delete book"
+        >&lt;delete book /&gt;</a
+      >
     </td>
   </tr>
   {%endfor%}
