--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,9 @@
 content %}
 <h1>Home Page</h1>
 <dl>
-  <dd>She tells me things</dd>
-  <dd>I listen well</dd>
-  <dt>Drink the wine</dt>
+  <dd>she tells me things</dd>
+  <dd>i listen well</dd>
+  <dt>drink the wine</dt>
   <dd>and save the water</dd>
   <dd class="credit">- Scott Weiland</dd>
 </dl>
