--- a/templates/includes/_style.html
+++ b/templates/includes/_style.html
@@ -115,6 +115,10 @@
 
   dl {
     display: inline-block;
+    font-family: "Indie Flower", "Patrick Hand", cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.25rem;
   }
 
   .credit {
