--- a/templates/books.html
+++ b/templates/books.html
@@ -8,7 +8,7 @@
     <th>id</th>
     <th>Name</th>
     <th>Author</th>
-    <th>Created</th>
+    <th>Created (time saved in UTC)</th>
     <th></th>
   </tr>
   {%for book in data%}
