--- a/templates/book_form.html
+++ b/templates/book_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block title %}Books{% endblock %} {% block content
 %}
-<h1>Book Form</h1>
+<h1>Add New Book</h1>
 <form method="POST">
   <label>Enter Book Name:</label>
   <input type="name" name="name" placeholder="Enter book name" required /><br />
