--- a/templates/includes/_style.html
+++ b/templates/includes/_style.html
@@ -149,4 +149,8 @@
     font-size: 28px;
     margin-bottom: 20px;
   }
+
+  .content h1.page-header {
+    text-transform: capitalize;
+  }
 </style>
